# mini-glrender-demo

./: .gitignore  CMakeLists.txt  c++.md  opengl.md  plan.md
src/: main.cpp
